Dockerfile added for docker builds and  README.md updated accordingly